hphp/hack/test/typecheck/modules/multiple_module_decls.php.exp
File "multiple_module_decls.php", line 5, characters 12-12:
Name already bound: `A` (Naming[2012])
  File "multiple_module_decls.php", line 4, characters 12-12:
  Previous definition is here
